feat: refactor project

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -30,54 +30,12 @@ header
   position: relative
   z-index: 10
 
-.header_nav__list
-  @include flex-space-between ()
-  width: 956px
-  padding-left: 13px
-
-.header_nav__list__item:hover
-  color: $yellow
-  cursor: pointer
-
-.header_nav__list__item__link
-  color: $white
-  &:hover
-    color: $yellow
-    cursor: pointer
-
 .header
   margin: 0 auto
   height: 80px
   width: 1310px
   color: $white
   @include flex-space-between ()
-
-.header__logo
-  position: relative
-  z-index: 10
-  &:hover
-    cursor: pointer
-
-.header_basket
-  position: relative
-  &:hover
-    cursor: pointer
-
-.header_basket__img
-  margin-right: 22px
-
-.header_basket__quantity
-  background: $orange
-  color: $black
-  width: 16px
-  height: 16px
-  border-radius: 8px
-  font-size: 12px
-  font-weight: 700
-  @include flexible ()
-  position: absolute
-  left: 21px
-  bottom: -6px
 
 .header__burger
   display: none
@@ -98,18 +56,14 @@ header
     transform: translate(-50%, -50%)
     background-color: $white
     transition: all 0.5s
+  &:hover
+    cursor: pointer
 
 .header__burger span:nth-of-type(2)
   top: calc(50% - 5px)
 
 .header__burger span:nth-of-type(3)
   top: calc(50% + 5px)
-
-.header__nav.active
-  transform: translateX(0)
-
-.header_nav__list__item
-  list-style-type: none
 
 .header__burger.active span:nth-of-type(1)
   top: 50%
@@ -123,6 +77,54 @@ header
   top: 50%
   transform: translate(-10%, 0%) rotate(90deg)
 
+.header__logo
+  position: relative
+  z-index: 10
+  &:hover
+    cursor: pointer
+
+.header__nav.active
+  transform: translateX(0)
+
+.header__nav__list__item
+  list-style-type: none
+
+.header__nav__list
+  @include flex-space-between ()
+  width: 956px
+  padding-left: 13px
+
+.header__nav__list__item:hover
+  color: $yellow
+  cursor: pointer
+
+.header__nav__list__item__link
+  color: $white
+  &:hover
+    color: $yellow
+    cursor: pointer
+
+.header__basket
+  position: relative
+  &:hover
+    cursor: pointer
+
+.header__basket__img
+  margin-right: 22px
+
+.header__basket__quantity
+  background: $orange
+  color: $black
+  width: 16px
+  height: 16px
+  border-radius: 8px
+  font-size: 12px
+  font-weight: 700
+  @include flexible ()
+  position: absolute
+  left: 21px
+  bottom: -6px
+
 .separation
   height: 97px
   position: absolute
@@ -131,11 +133,11 @@ header
   left: 0
   right: 0
 
-.separation_img
+.separation__img
   width: 100%
   height: 97px
 
-.startPage_wrapper
+.startPage__wrapper
   height: 792px
   background: $yellow
 
@@ -144,7 +146,7 @@ header
   width: 1314px
   display: flex
 
-.startPage_info__title
+.startPage__info__title
   font-size: 144px
   font-weight: 700
   line-height: 152px
@@ -154,41 +156,41 @@ header
   z-index: 5
   position: relative
 
-.startPage_info__text1
+.startPage__info__text1
   font-size: 24px
   font-weight: 400
   line-height: 28px
   width: 657px
   margin-top: 30px
 
-.startPage_info__subtitle
+.startPage__info__subtitle
   font-size: 36px
   font-weight: 700
   line-height: 43px
   margin-top: 109px
 
-.startPage_info__text2
+.startPage__info__text2
   line-height: 21px
   width: 350px
   margin-top: 8px
 
-.startPage_img
+.startPage__img
   position: relative
   right: 430px
 
-#startPage_img__lemon, #startPage_img__nootris,
-#startPage_img__ginger
+#startPage__img__lemon, #startPage__img__nootris,
+#startPage__img__ginger
   position: absolute
 
-#startPage_img__lemon
+#startPage__img__lemon
   left: -283px
   top: 441px
 
-#startPage_img__nootris
+#startPage__img__nootris
   bottom: -1px
   left: 108px
 
-#startPage_img__ginger
+#startPage__img__ginger
   bottom: 15px
   left: -66px
 
@@ -202,7 +204,7 @@ header
   flex-direction: column
   align-items: center
 
-.salePage_title
+.salePage__title
   font-size: 48px
   font-weight: 700
   line-height: 57px
@@ -213,12 +215,12 @@ header
   &:first-line
     color: $white
 
-.salePage_price
+.salePage__price
   @include flex-space-between ()
   width: 270px
   margin-top: 77px
 
-.salePage_price__old
+.salePage__price__old
   color: $grey
   font-size: 36px
   line-height: 43px
@@ -226,61 +228,61 @@ header
   text-decoration: 3px $grey line-through
   margin-left: 20px
 
-.salePage_price__new
+.salePage__price__new
   color: $white
   font-size: 48px
   line-height: 57px
   text-align: left
 
-.salePage_info
+.salePage__info
   @include flex-space-between ()
   width: 1087px
   margin-top: 49px
 
-.salePage_info__item
+.salePage__info__item
   @include flexible ()
   flex-direction: column
 
-#salePage_info__item-ginger
+#salePage__info__item__ginger
   width: 193px
   height: 161px
   margin-top: -8px
 
-#salePage_info__item-ginger-text1
+#salePage__info__item__ginger__text1
   padding-right: 6px
 
-#salePage_info__item-nootris
+#salePage__info__item__nootris
   width: 480px
   height: 160px
   margin-bottom: -49px
 
-#salePage_info__item-virus
+#salePage_info__item__virus
   width: 192px
   height: 160px
 
-#salePage_info__item-nootris-text1
+#salePage__info__item__nootris__text1
   font-size: 36px
   line-height: 43px
   text-align: left
   margin-top: 95px
   margin-right: 10px
 
-#salePage_info__item-nootris-text2
+.salePage__info__item__text1
+  color: $white
+  text-align: center
+  margin-top: 86px
+
+.salePage__info__item__text2
+  color: $orange
+  text-align: center
+
+#salePage__info__item__nootris__text2
   font-size: 24px
   line-height: 28px
   text-align: center
   margin-top: 8px
 
-.salePage_info__item-text1
-  color: $white
-  text-align: center
-  margin-top: 86px
-
-.salePage_info__item-text2
-  color: $orange
-  text-align: center
-
-.salePage_button
+.salePage__button
   height: 56px
   width: 256px
   border-radius: 7px
@@ -296,48 +298,48 @@ header
   .header
     width: 960px
 
-  .header_nav__list
+  .header__nav__list
     width: 770px
     padding: 0
 
-  .header_nav__list__item
+  .header__nav__list__item
     font-size: 16px
 
-  .header_basket__img
+  .header__basket__img
     margin: 0
 
   .startPage
     width: 960px
 
-  .startPage_info__title
+  .startPage__info__title
     font-size: 95px
 
-  .startPage_info__text1
+  .startPage__info__text1
     font-size: 18px
     line-height: 28px
     width: 495px
     margin-top: 15px
 
-  .startPage_info__text1, .salePage_info-text2
+  .startPage__info__text1, .salePage__info__text2
     font-size: 16px
 
-  .startPage_info__subtitle
+  .startPage__info__subtitle
     margin-top: 90px
     font-size: 34px
 
-  #startPage_img__ginger
+  #startPage__img__ginger
     bottom: -19px
     left: -60px
 
-  #startPage_img__nootris
+  #startPage__img__nootris
     bottom: -35px
     left: 140px
 
-  #startPage_img__lemon
+  #startPage__img__lemon
     left: -252px
     top: 448px
 
-  .salePage_info
+  .salePage__info
     width: 960px
 
 @media (min-width: 768px) and (max-width: 991px)
@@ -360,7 +362,7 @@ header
     transition: transform 0.5s
     left: 0
 
-  .header_nav__list
+  .header__nav__list
     flex-direction: column
     font-weight: 700
     position: relative
@@ -374,60 +376,60 @@ header
   .header__burger
     display: block
 
-  .startPage_info__title
+  .startPage__info__title
     font-size: 100px
     text-align: center
 
-  #startPage_img__lemon
+  #startPage__img__lemon
     left: 76px
     top: 614px
     width: 266px
     height: 232px
 
-  #startPage_img__nootris
+  #startPage__img__nootris
     bottom: -24px
     left: 272px
     width: 112px
     height: 318px
 
-  #startPage_img__ginger
+  #startPage__img__ginger
     bottom: -15px
     left: 184px
     width: 248px
     height: 204px
 
-  .startPage_info__text1
+  .startPage__info__text1
     width: 500px
     padding-left: 35px
 
-  .startPage_info__text2, .startPage_info__subtitle
+  .startPage__info__text2, .startPage__info__subtitle
     padding-left: 35px
 
-  .startPage_info__subtitle
+  .startPage__info__subtitle
     margin-top: 95px
 
-  .salePage_title
+  .salePage__title
     font-size: 35px
     width: 620px
 
   .salePage__wrapper
     height: 1175px
 
-  .salePage_price
+  .salePage__price
     margin-bottom: 20px
 
-  .salePage_info
+  .salePage__info
     flex-wrap: wrap
     width: 500px
 
-  #salePage_info-nootris-text1
+  #salePage__info__nootris__text1
     margin-top: 85px
 
-  .salePage_info div:nth-child(2)
+  .salePage__info div:nth-child(2)
     order: -1
     margin-bottom: 50px
 
-  .salePage_info__item-text1
+  .salePage__info__item__text1
     margin-top: 20px
 
 @media (min-width: 480px) and (max-width: 767px)
@@ -455,7 +457,7 @@ header
   .header__burger
     display: block
 
-  .header_nav__list
+  .header__nav__list
     flex-direction: column
     font-weight: 700
     position: relative
@@ -463,78 +465,78 @@ header
     top: 115px
     line-height: 75px
 
-  .startPage_wrapper
+  .startPage__wrapper
     height: 985px
 
-  .startPage_info__title
+  .startPage__info__title
     font-size: 60px
     text-align: center
     line-height: 70px
     margin-top: 150px
 
-  #startPage_img__lemon
+  #startPage__img__lemon
     left: 49px
     top: 604px
     width: 266px
     height: 232px
 
-  #startPage_img__nootris
+  #startPage__img__nootris
     bottom: 226px
     left: 244px
     width: 112px
     height: 318px
 
-  #startPage_img__ginger
+  #startPage__img__ginger
     bottom: 234px
     left: 157px
     width: 248px
     height: 204px
 
-  .startPage_info
+  .startPage__info
     display: flex
     flex-direction: column
     align-items: center
 
-  .startPage_info__text1, .startPage_info__text2,
-  .startPage_info__subtitle
+  .startPage__info__text1, .startPage__info__text2,
+  .startPage__info__subtitle
     width: 400px
     text-align: center
     margin: 10px 0
 
-  .startPage_info__subtitle
+  .startPage__info__subtitle
     margin-top: 450px
 
-  .salePage_title
+  .salePage__title
     font-size: 26px
     width: 440px
 
   .salePage__wrapper
-    height: 1175px
+    height: 1215px
 
-  .salePage_price
+  .salePage__price
     margin-bottom: 20px
     margin-top: 60px
 
-  .salePage_info
+  .salePage__info
     flex-wrap: wrap
     width: 400px
 
-  #salePage_info-nootris-text1
+  #salePage__info__nootris__text1
     margin-top: 85px
     font-size: 34px
 
-  .salePage_info div:nth-child(2)
+  .salePage__info div:nth-child(2)
     order: -1
     margin-bottom: 65px
 
-  .salePage_info__item-text1
+  .salePage__info__item__text1
     margin-top: 20px
 
-  #salePage_info__item-nootris
+  #salePage__info__item-nootris
     width: 320px
     height: 107px
 
-  .salePage_button
+  .salePage__button
     margin-top: 85px
 
 @media (max-width: 479px)
@@ -563,7 +565,7 @@ header
     transition: transform 0.5s
     left: 0
 
-  .header_nav__list
+  .header__nav__list
     flex-direction: column
     font-weight: 700
     position: relative
@@ -571,53 +573,53 @@ header
     top: 115px
     line-height: 75px
 
-  .startPage_wrapper
+  .startPage__wrapper
     height: 900px
 
-  .startPage_info__title
+  .startPage__info__title
     font-size: 40px
     text-align: center
     line-height: 60px
     margin-top: 150px
 
-  #startPage_img__lemon
+  #startPage__img__lemon
     left: 166px
     top: 519px
     width: 178px
     height: 154px
 
-  #startPage_img__nootris
+  #startPage__img__nootris
     bottom: 226px
     left: 285px
     width: 75px
     height: 212px
 
-  #startPage_img__ginger
+  #startPage__img__ginger
     bottom: 247px
     left: 224px
     width: 165px
     height: 137px
 
-  .startPage_info
+  .startPage__info
     display: flex
     flex-direction: column
     align-items: center
 
-  .startPage_info__text1, .startPage_info__text2,
-  .startPage_info__subtitle
+  .startPage__info__text1, .startPage__info__text2,
+  .startPage__info__subtitle
     width: 300px
     text-align: center
     margin: 10px 0
 
-  .startPage_info__text1
+  .startPage__info__text1
     font-size: 17px
     margin-top: 30px
 
-  .startPage_info__subtitle
+  .startPage__info__subtitle
     margin-top: 345px
     font-size: 29px
 
-  .salePage_title
+  .salePage__title
     font-size: 17px
     width: 300px
     line-height: 30px
@@ -626,38 +628,38 @@ header
   .salePage__wrapper
     height: 1300px
 
-  .salePage_price
+  .salePage__price
     margin-bottom: 20px
     margin-top: 60px
 
-  .salePage_info
+  .salePage__info
     flex-wrap: wrap
     width: 300px
     display: flex
     flex-direction: column
     align-items: center
 
-  .salePage_info__item
+  .salePage__info__item
     margin-bottom: 45px
 
-  #salePage_info__item-nootris-text1
+  #salePage__info__item__nootris__text1
     margin: 75px 0 0
     font-size: 25px
     text-align: center
 
-  .salePage_info div:nth-child(2)
+  .salePage__info div:nth-child(2)
     order: -1
     margin-bottom: 65px
 
-  .salePage_info__item-text1
+  .salePage__info__item__text1
     margin-top: 20px
 
-  #salePage_info__item-virus-text1
+  #salePage__info__item__virus__text1
     margin-top: 10px
 
-  #salePage_info__item-nootris
+  #salePage__info__item__nootris
     width: 299px
     height: 100px
 
-  .salePage_button
+  .salePage__button
     margin-top: 50px
