--- a/styles/style.sass
+++ b/styles/style.sass
@@ -37,10 +37,10 @@ header
   color: $white
   @include flex-space-between ()
 
-.header__burger
+.burger
   display: none
 
-.header__burger
+.burger
   width: 30px
   height: 30px
   position: relative
@@ -59,60 +59,60 @@ header
   &:hover
     cursor: pointer
 
-.header__burger span:nth-of-type(2)
+.burger span:nth-of-type(2)
   top: calc(50% - 5px)
 
-.header__burger span:nth-of-type(3)
+.burger span:nth-of-type(3)
   top: calc(50% + 5px)
 
-.header__burger.active span:nth-of-type(1)
+.burger.active span:nth-of-type(1)
   top: 50%
   transform: translate(-90%, 0%) rotate(90deg)
 
-.header__burger.active span:nth-of-type(2)
+.burger.active span:nth-of-type(2)
   top: 50%
   transform: translate(-50%, 0%) rotate(90deg)
 
-.header__burger.active span:nth-of-type(3)
+.burger.active span:nth-of-type(3)
   top: 50%
   transform: translate(-10%, 0%) rotate(90deg)
 
-.header__logo
+.logo
   position: relative
   z-index: 10
   &:hover
     cursor: pointer
 
-.header__nav.active
+.navListWrapper.active
   transform: translateX(0)
 
-.header__nav__list__item
+.navList__item
   list-style-type: none
 
-.header__nav__list
+.navList
   @include flex-space-between ()
   width: 956px
   padding-left: 13px
 
-.header__nav__list__item:hover
+.navList__item:hover
   color: $yellow
   cursor: pointer
 
-.header__nav__list__item__link
+.navList__link
   color: $white
   &:hover
     color: $yellow
     cursor: pointer
 
-.header__basket
+.basket
   position: relative
   &:hover
     cursor: pointer
 
-.header__basket__img
+.basket__img
   margin-right: 22px
 
-.header__basket__quantity
+.basket__quantity
   background: $orange
   color: $black
   width: 16px
@@ -137,7 +137,7 @@ header
   width: 100%
   height: 97px
 
-.startPage__wrapper
+.startPageWrapper
   height: 792px
   background: $yellow
 
@@ -146,7 +146,7 @@ header
   width: 1314px
   display: flex
 
-.startPage__info__title
+.startPage__infoTitle
   font-size: 144px
   font-weight: 700
   line-height: 152px
@@ -156,45 +156,44 @@ header
   z-index: 5
   position: relative
 
-.startPage__info__text1
+.startPage__infoText1
   font-size: 24px
   font-weight: 400
   line-height: 28px
   width: 657px
   margin-top: 30px
 
-.startPage__info__subtitle
+.startPage__infoSubtitle
   font-size: 36px
   font-weight: 700
   line-height: 43px
   margin-top: 109px
 
-.startPage__info__text2
+.startPage__infoText2
   line-height: 21px
   width: 350px
   margin-top: 8px
 
-.startPage__img
+.startPage__images
   position: relative
   right: 430px
 
-#startPage__img__lemon, #startPage__img__nootris,
-#startPage__img__ginger
+#lemon, #nootris, #ginger
   position: absolute
 
-#startPage__img__lemon
+#lemon
   left: -283px
   top: 441px
 
-#startPage__img__nootris
+#nootris
   bottom: -1px
   left: 108px
 
-#startPage__img__ginger
+#ginger
   bottom: 15px
   left: -66px
 
-.salePage__wrapper
+.salePageWrapper
   background: $black
   height: 926px
 
@@ -220,7 +219,7 @@ header
   width: 270px
   margin-top: 77px
 
-.salePage__price__old
+.salePage__oldPrice
   color: $grey
   font-size: 36px
   line-height: 43px
@@ -228,7 +227,7 @@ header
   text-decoration: 3px $grey line-through
   margin-left: 20px
 
-.salePage__price__new
+.salePage__newPrice
   color: $white
   font-size: 48px
   line-height: 57px
@@ -239,11 +238,11 @@ header
   width: 1087px
   margin-top: 49px
 
-.salePage__info__item
+.salePage__infoItem
   @include flexible ()
   flex-direction: column
 
-#salePage__info__item__ginger
+#salePageGinger
   width: 193px
   height: 161px
   margin-top: -8px
@@ -251,12 +250,12 @@ header
 #salePage__info__item__ginger__text1
   padding-right: 6px
 
-#salePage__info__item__nootris
+#salePageNootris
   width: 480px
   height: 160px
   margin-bottom: -49px
 
-#salePage_info__item__virus
+#salePageVirus
   width: 192px
   height: 160px
 
@@ -267,12 +266,12 @@ header
   margin-top: 95px
   margin-right: 10px
 
-.salePage__info__item__text1
+.salePage__infoItemText1
   color: $white
   text-align: center
   margin-top: 86px
 
-.salePage__info__item__text2
+.salePage__infoItemText2
   color: $orange
   text-align: center
 
@@ -298,44 +297,44 @@ header
   .header
     width: 960px
 
-  .header__nav__list
+  .navList
     width: 770px
     padding: 0
 
-  .header__nav__list__item
+  .navList__item
     font-size: 16px
 
-  .header__basket__img
+  .basket__img
     margin: 0
 
   .startPage
     width: 960px
 
-  .startPage__info__title
+  .startPage__infoTitle
     font-size: 95px
 
-  .startPage__info__text1
+  .startPage__infoText1
     font-size: 18px
     line-height: 28px
     width: 495px
     margin-top: 15px
 
-  .startPage__info__text1, .salePage__info__text2
+  .startPage__infoText1, .startPage__infoText2
     font-size: 16px
 
-  .startPage__info__subtitle
+  .startPage__infoSubtitle
     margin-top: 90px
     font-size: 34px
 
-  #startPage__img__ginger
+  #ginger
     bottom: -19px
     left: -60px
 
-  #startPage__img__nootris
+  #nootris
     bottom: -35px
     left: 140px
 
-  #startPage__img__lemon
+  #lemon
     left: -252px
     top: 448px
 
@@ -352,7 +351,7 @@ header
     width: 720px
     justify-content: space-between
 
-  .header__nav
+  .navListWrapper
     position: fixed
     top: 0
     width: 320px
@@ -362,7 +361,7 @@ header
     transition: transform 0.5s
     left: 0
 
-  .header__nav__list
+  .navList
     flex-direction: column
     font-weight: 700
     position: relative
@@ -373,46 +372,46 @@ header
   .startPage
     width: 740px
 
-  .header__burger
+  .burger
     display: block
 
-  .startPage__info__title
+  .startPage__infoTitle
     font-size: 100px
     text-align: center
 
-  #startPage__img__lemon
+  #lemon
     left: 76px
     top: 614px
     width: 266px
     height: 232px
 
-  #startPage__img__nootris
+  #nootris
     bottom: -24px
     left: 272px
     width: 112px
     height: 318px
 
-  #startPage__img__ginger
+  #ginger
     bottom: -15px
     left: 184px
     width: 248px
     height: 204px
 
-  .startPage__info__text1
+  .startPage__infoText1
     width: 500px
     padding-left: 35px
 
-  .startPage__info__text2, .startPage__info__subtitle
+  .startPage__infoText2, .startPage__infoSubtitle
     padding-left: 35px
 
-  .startPage__info__subtitle
+  .startPage__infoSubtitle
     margin-top: 95px
 
   .salePage__title
     font-size: 35px
     width: 620px
 
-  .salePage__wrapper
+  .salePageWrapper
     height: 1175px
 
   .salePage__price
@@ -429,7 +428,7 @@ header
     order: -1
     margin-bottom: 50px
 
-  .salePage__info__item__text1
+  .salePage__infoItemText1
     margin-top: 20px
 
 @media (min-width: 480px) and (max-width: 767px)
@@ -441,7 +440,7 @@ header
   .header
     width: 420px
 
-  .header__nav
+  .navListWrapper
     position: fixed
     top: 0
     width: 320px
@@ -454,10 +453,10 @@ header
   .startPage
     width: 450px
 
-  .header__burger
+  .burger
     display: block
 
-  .header__nav__list
+  .navList
     flex-direction: column
     font-weight: 700
     position: relative
@@ -465,28 +464,28 @@ header
     top: 115px
     line-height: 75px
 
-  .startPage__wrapper
+  .startPageWrapper
     height: 985px
 
-  .startPage__info__title
+  .startPage__infoTitle
     font-size: 60px
     text-align: center
     line-height: 70px
     margin-top: 150px
 
-  #startPage__img__lemon
+  #lemon
     left: 49px
     top: 604px
     width: 266px
     height: 232px
 
-  #startPage__img__nootris
+  #nootris
     bottom: 226px
     left: 244px
     width: 112px
     height: 318px
 
-  #startPage__img__ginger
+  #ginger
     bottom: 234px
     left: 157px
     width: 248px
@@ -497,20 +496,20 @@ header
     flex-direction: column
     align-items: center
 
-  .startPage__info__text1, .startPage__info__text2,
-  .startPage__info__subtitle
+  .startPage__infoText1, .startPage__infoText2,
+  .startPage__infoSubtitle
     width: 400px
     text-align: center
     margin: 10px 0
 
-  .startPage__info__subtitle
+  .startPage__infoSubtitle
     margin-top: 450px
 
   .salePage__title
     font-size: 26px
     width: 440px
 
-  .salePage__wrapper
+  .salePageWrapper
     height: 1215px
 
   .salePage__price
@@ -521,7 +520,7 @@ header
     flex-wrap: wrap
     width: 400px
 
-  #salePage__info__nootris__text1
+  #salePage__info__item__nootris__text1
     margin-top: 85px
     font-size: 34px
 
@@ -529,10 +528,10 @@ header
     order: -1
     margin-bottom: 65px
 
-  .salePage__info__item__text1
+  .salePage__infoItemText1
     margin-top: 20px
 
-  #salePage__info__item-nootris
+  #salePageNootris
     width: 320px
     height: 107px
 
@@ -552,10 +551,10 @@ header
     width: 300px
     justify-content: center
 
-  .header__burger
+  .burger
     display: block
 
-  .header__nav
+  .navListWrapper
     position: fixed
     top: 0
     width: 320px
@@ -565,7 +564,7 @@ header
     transition: transform 0.5s
     left: 0
 
-  .header__nav__list
+  .navList
     flex-direction: column
     font-weight: 700
     position: relative
@@ -573,28 +572,28 @@ header
     top: 115px
     line-height: 75px
 
-  .startPage__wrapper
+  .startPageWrapper
     height: 900px
 
-  .startPage__info__title
+  .startPage__infoTitle
     font-size: 40px
     text-align: center
     line-height: 60px
     margin-top: 150px
 
-  #startPage__img__lemon
+  #lemon
     left: 166px
     top: 519px
     width: 178px
     height: 154px
 
-  #startPage__img__nootris
+  #nootris
     bottom: 226px
     left: 285px
     width: 75px
     height: 212px
 
-  #startPage__img__ginger
+  #ginger
     bottom: 247px
     left: 224px
     width: 165px
@@ -605,17 +604,17 @@ header
     flex-direction: column
     align-items: center
 
-  .startPage__info__text1, .startPage__info__text2,
-  .startPage__info__subtitle
+  .startPage__infoText1, .startPage__infoText2,
+  .startPage__infoSubtitle
     width: 300px
     text-align: center
     margin: 10px 0
 
-  .startPage__info__text1
+  .startPage__infoText1
     font-size: 17px
     margin-top: 30px
 
-  .startPage__info__subtitle
+  .startPage__infoSubtitle
     margin-top: 345px
     font-size: 29px
 
@@ -625,7 +624,7 @@ header
     line-height: 30px
     margin-top: 75px
 
-  .salePage__wrapper
+  .salePageWrapper
     height: 1300px
 
   .salePage__price
@@ -639,7 +638,7 @@ header
     flex-direction: column
     align-items: center
 
-  .salePage__info__item
+  .salePage__infoItem
     margin-bottom: 45px
 
   #salePage__info__item__nootris__text1
@@ -651,13 +650,13 @@ header
     order: -1
     margin-bottom: 65px
 
-  .salePage__info__item__text1
+  .salePage__infoItemText1
     margin-top: 20px
 
   #salePage__info__item__virus__text1
     margin-top: 10px
 
-  #salePage__info__item__nootris
+  #salePageNootris
     width: 299px
     height: 100px
 
